  * new upstream snapshot: 3.0b2pre cvs20071120t1456
  * Drop debian/patches/no-have-stdint-h-ftbfs.patch integrated
    upstream and bump xulrunner requirements to 1.9~b2~cvs20071119
    - update debian/control
    - drop debian/patches/no-have-stdint-h-ftbfs.patch
    - update debian/patches/series
  * Add libdbus-glib-1-dev >= 0.60 to build-deps. See MozBug #388743.
    - update debian/control
  * Add libpixman-1-dev to build-deps, needed by cairo 1.5
    - update debian/control
  * new upstream snapshot (3.0b2 RC1) from tag FIREFOX_3_0b2_RC1
  * Update Standards-Version to 3.7.3
    - update debian/control
  * Drop -1.9 suffix of expected xulrunner-1.9 pkg-config files
    - update debian/patches/nspr_flags_by_pkg_config_hack.patch

 -- Fabien Tassin <fta@sofaraway.org>  Wed, 12 Dec 2007 00:17:35 +0100

firefox-3.0 (3.0~b1+nobinonly-0ubuntu1) hardy; urgency=low

  * new upstream snapshot (3.0b1 from FIREFOX_3_0b1_RELEASE)
    - update debian/changelog
  * Rename desktop file firefox-3.0-final.desktop so it doesn't
    get cleaned out
    - update debian/rules
    - rename debian/firefox-3.0.desktop to firefox-3.0-final.desktop
  * Install extensions in /usr/lib/xulrunner-addons/extensions
    - update debian/firefox-3.0.install
    - update debian/rules
  * Use official branding for beta too as homepage/releasenotes URLs
    are maintained that way. Disable crash reporter.
    - update debian/patches/firefox-profilename
    - update debian/rules
    - update debian/firefox-3.0-final.desktop
  * Fix URLs for addons/themes/plugins
    - update debian/patches/firefox-profilename
  * Revert hardcoded lib path to the upstream path, move searchplugins to
    /usr/lib/firefox-addons/searchplugins and plugins to
    /usr/lib/firefox-addons/plugins.
    - update debian/patches/firefox-fsh
    - update debian/rules
    - divert debian/firefox-3.0.postinst => debian/firefox-3.0.postinst.in
    - divert debian/firefox.sh => debian/firefox.sh.in