@@ -109,10 +109,7 @@ DEB_CONFIGURE_USER_FLAGS= \
         --with-distribution-id=com.ubuntu \
 	$(BRANDING)
 
-USE_SYSTEM_CAIRO := $(shell pkg-config --exists 'cairo >= 1.4.0'; a=$$?; if test $$a != 1; then echo 1; fi)
-
-# disabled as of 3.0a7 because of the infamous assert() on shutdown with Gutsy's libcairo-1.4.10 	
-USE_SYSTEM_CAIRO=0 	
+USE_SYSTEM_CAIRO := $(shell pkg-config --exists 'cairo >= 1.5.4'; a=$$?; if test $$a != 1; then echo 1; fi)
 
 # for old cairo versions we cannot use system cairo
 ifeq (1, $(USE_SYSTEM_CAIRO))
