@@ -8,6 +8,8 @@ firefox-3.0 (3.0~b2~rc1+nobinonly-0ubuntu1) UNRELEASED; urgency=low
     - update debian/patches/series
   * Add libdbus-glib-1-dev >= 0.60 to build-deps. See MozBug #388743.
     - update debian/control
+  * Update rules for system cairo >= 1.5.4
+    - update debian/rules
   * Add libpixman-1-dev to build-deps, needed by cairo 1.5
     - update debian/control
   * new upstream snapshot (3.0b2 RC1) from tag FIREFOX_3_0b2_RC1
